<resources>
    <string name="app_name">My Health</string>
    <string name="button3">Register</string>
    <string name="txtphone">Phone</string>
    <string name="txtemail">Email</string>
    <string name="txtPass">Password</string>
    <string name="txtname">Username</string>


    <string name="action_settings">Settings</string>


    <!-- Strings related to Scrolling -->


    <!-- Strings related to Fullscreen -->
    <string name="title_activity_fullscreen">Fullscreen</string>


    <!-- String related to Login -->
    <string name="btnlogin">Login</string>
    <string name="login_user_name_hint">phone or email</string>
    <string name="login_user_name_password">password</string>
    <string name="action_sign_in">Login</string>
    <string name="forgot_password"> Forgot password?</string>
    <string name="error_invalid_name">Invalid user name</string>
    <string name="error_invalid_password">At least 4</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_no_name">Input your phone or email</string>
    <string name="error_no_password">Input your password</string>
    <string name="snackbar_forgot_password">Oh oh !</string>
    <string name="snackbar_register">Oh oh !</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_switch_preference_title">Switch Preference</string>
    <string name="settings_switch_preference_summary">Switch Preference Summary</string>
    <string name="settings_check_box_preference_title">Check Box Preference</string>
    <string name="settings_edit_text_preference_title">Edit Text Preference</string>
    <string name="settings_edit_text_preference_default_value">Material Design</string>
    <string name="settings_list_preference_dialog_title">List Preference</string>
    <string name="settings_list_preference_title">List Preference</string>
    <string name="settings_multi_select_list_preference_dialog_title">Multi Select List Preference</string>
    <string name="settings_multi_select_list_preference_title">Multi Select List Preference</string>
    <string name="settings_preference_click_title">OnPreferenceClickListener</string>
    <string name="settings_preference_click_to_activity">Click to start an activity</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_on_preference_click">onPreferenceClick</string>

    <!-- String related to About -->


    <!-- String related to About -->

    <string name="remember_me">Remember me</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="forget_your_password">Forget your Password?</string>
    <string name="todo">TODO</string>


    <string name="Nav_home">Home</string>
    <string name="Nav_notification">Notification</string>
    <string name="Nav_Map">Map</string>
    <string name="Nav_settings">Settings</string>
    <string name="Nav_Log">Log out</string>
    <string name="Nav_disease">Disease</string>
    <string name="title_activity_home">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Health</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>

</resources>



