<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/baseline_home_black_24dp"
            android:title="@string/Nav_home"/>

        <item
            android:id="@+id/notification"
            android:icon="@drawable/baseline_notifications_active_black_24dp"
            android:title="@string/Nav_notification" />
        <item
            android:id="@+id/map"
            android:icon="@drawable/baseline_place_black_24dp"
            android:title="@string/Nav_Map" />

        <item
            android:id="@+id/disease"
            android:icon="@drawable/baseline_local_hospital_black_24dp"
            android:title="@string/Nav_disease" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/baseline_settings_black_24dp"
            android:title="@string/Nav_settings" />

        <item
            android:id="@+id/log"
            android:icon="@drawable/baseline_settings_power_black_24dp"
            android:title="@string/Nav_Log" />
    </group>



</menu>
