<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/new_login_gradients">




            <!-- Here you can put your logo or brand name -->

    <ImageView
        android:layout_width="240dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/todo"

        android:padding="16dp"
        android:src="@drawable/ic_directions_bike_black_24dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_person_white_24dp"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/ic_person_white_24dp"
        android:ems="10"
        android:hint="@string/txtname"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="8dp"
        android:textColorHint="#fff" />

    <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_lock_white_24dp"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/ic_lock_white_24dp"
        android:ems="10"
        android:hint="@string/txtPass"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="8dp"
        android:textColorHint="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/remember_me"
                android:textColor="#fff" />

    <Button
        android:id="@+id/btnlogin"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_login"
        android:clickable="true"
        android:focusable="true"
        android:onClick="home_btn"
        android:padding="16dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="#f16f7d"
        android:textSize="20sp" />


    <TextView
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:text="@string/forget_your_password"
        android:textColor="#fff" />


        </LinearLayout>


