<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/new_login_gradients">


    <EditText
        android:id="@+id/txtname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:drawableLeft="@drawable/ic_person_white_24dp"
        android:drawableStart="@drawable/ic_person_white_24dp"
        android:ems="10"
        android:hint="@string/txtname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:drawableLeft="@drawable/ic_lock_white_24dp"
        android:drawableStart="@drawable/ic_lock_white_24dp"
        android:ems="10"
        android:hint="@string/txtPass"
        android:inputType="numberPassword" />

    <EditText
        android:id="@+id/txtemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="135dp"
        android:drawableLeft="@drawable/outline_email_24"
        android:drawableStart="@drawable/outline_email_24"
        android:ems="10"
        android:hint="@string/txtemail"
        android:inputType="textEmailAddress"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="205dp"
        android:drawableLeft="@drawable/outline_phone_24"
        android:drawableStart="@drawable/outline_phone_24"
        android:ems="10"
        android:hint="@string/txtphone"
        android:inputType="phone" />


    <Button
        android:id="@+id/button3"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="102dp"
        android:background="@drawable/background_signup"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:text="@string/button3"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnlogin"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:background="@drawable/background_login"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="#f16f7d"
        android:textSize="25sp" />
</RelativeLayout>
